order-service/manifests/DB_service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-db-service
  labels:
    app: order-db
spec:
  selector:
    app: order-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
